# webgl-rs

./: Cargo.toml  README.md
example/: .gitignore  Cargo.toml
example/assets/: box.dds
example/html/: index.html  wasm-webgl-rs.wasm
example/html/index_files/: app.js.download
example/html/js/: app.js
example/src/: compressed_texture.rs  dds.rs  main.rs  simple.rs  utils.rs
example/static/: index.html  lib.js
example/static/js/: app_ffi.js  app_old.js
pkg/: package.json  webgl_bg.wasm
src/: common.rs  glenum.rs  lib.js  lib.rs  lib.ts  webgl.rs  webgl_native.rs  webgl_web.rs
