[package]
name = "webgl"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

description = "wasm32 first cross-platform webgl"
repository = "https://github.com/oussama/webgl-rs"
keywords = ["webgl","opengl"]
license = "Apache-2.0"
documentation = "https://docs.rs/webgl"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
glenum = { git = "https://github.com/oussama/glenum-rs.git" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "*"
