[package]
name = "webgl"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

description = "wasm32 first cross-platform webgl"
repository = "https://github.com/oussama/webgl-rs"
keywords = ["webgl","opengl"]
license = "Apache-2.0"
documentation = "https://docs.rs/webgl"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
glenum = { path = "../glenum" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.9"


[features]
default = ["stdw"]


stdw = ["stdweb"]