[package]
name = "webgl"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

description = "wasm32 first cross-platform webgl"
repository = "https://github.com/oussama/webgl-rs"
keywords = ["webgl","opengl"]
license = "Apache-2.0"
documentation = "https://docs.rs/webgl"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
glenum = "*"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3"
features = [ "WebGl2RenderingContext",
"WebGlActiveInfo"	,
"WebGlBuffer"	,
"WebGlContextAttributes"	,
"WebGlContextEvent"	,
"WebGlContextEventInit"	,
"WebGlFramebuffer",
"WebGlProgram",
"WebGlQuery",
"WebGlRenderbuffer",
"WebGlRenderingContext"	,
"WebGlSampler",
"WebGlShader",
"WebGlShaderPrecisionFormat",
"WebGlSync"	,
"WebGlTexture",
"WebGlTransformFeedback",
"WebGlUniformLocation",
"WebGlVertexArrayObject" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.9"
