[package]
name = "wasm-webgl-rs"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
webgl = { path = "../" }
application = { path = "../../application" }
byteorder = "*"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "*"
